# AviSynth_Yadifmod2

./: .gitignore  CMakeLists.txt  readme.md
avisynth/: readme.md
avisynth/src/: arch.h  common.h  cpu_check.cpp  proc_filter.cpp  proc_filter.h  resource.h  simd.h  yadifmod2.cpp  yadifmod2.h  yadifmod2.rc
avisynth/vs2015/: yadifmod2.vcxproj
msvc/: yadifmod2.sln  yadifmod2.vcxproj
src/: common.h  cpu_check.cpp  proc_filter.cpp  proc_filter_avx.cpp  proc_filter_avx2.cpp  proc_filter_sse2.cpp  proc_filter_sse41.cpp  proc_filter_ssse3.cpp  resource.h  simd.h  simd_avx.h  simd_avx2.h  simd_sse41.h  simd_ssse3.h  yadifmod2.cpp  yadifmod2.h  yadifmod2.rc  yadifmod2.vcxproj
vapoursynth/: readme.md
vapoursynth/src/: GNUmakefile  arch.h  configure  cpu_check.cpp  myvectors.h  myvshelper.h  plugin.cpp  proc_filter.cpp  proc_filter.h  simd.h  yadifmod2.cpp  yadifmod2.h
vapoursynth/vs2015/: yadifmod2.vcxproj
